@@ -1,13 +1,0 @@
-package org.mmisw.vine.gwt.client.rpc;
-
-import java.io.Serializable;
-
-/**
- * Info about a class.
- * 
- * @author Carlos Rueda
- */
-public class ClassInfo extends EntityInfo implements Serializable {
-	private static final long serialVersionUID = 1L;
-
-}
