@@ -1,17 +1,0 @@
-package org.mmisw.vine.gwt.client.rpc;
-
-import java.io.Serializable;
-
-/**
- * Info about an individual.
- * 
- * @author Carlos Rueda
- */
-public class IndividualInfo extends EntityInfo implements Serializable {
-	private static final long serialVersionUID = 1L;
-	
-	public IndividualInfo() {
-		super();
-	}
-
-}
